--- a/emacs.d/thomasf-emacs.org
+++ b/emacs.d/thomasf-emacs.org
@@ -327,7 +327,7 @@ Current:
   (require 'auto-complete)
   (require 'auto-complete-config)
   (global-auto-complete-mode t)
-  (setq ac-auto-start nil)
+  ;;(setq ac-auto-start nil)
   (setq ac-dwim nil) ; To get pop-ups with docs even if a word is uniquely completed
 
   ;; MOVE TO KEYB?
@@ -367,65 +367,17 @@ Current:
   (add-to-list 'ac-dictionary-directories (concat vendor-dir "auto-complete/dict/"))
 
   (ac-config-default)
-#+end_src
-
-Somethings to be inspired by?
-#+begin_src emacs-lisp :tangle no
-   (require 'auto-complete)
-   (require 'auto-complete-config)
-   (global-auto-complete-mode t)
-   (setq ac-auto-start nil)
-   (setq ac-dwim nil) ; To get pop-ups with docs even if a word is uniquely completed
-   (define-key ac-completing-map (kbd "C-n") 'ac-next)
-   (define-key ac-completing-map (kbd "C-p") 'ac-previous)
-
-   ;;----------------------------------------------------------------------------
-   ;; Use Emacs' built-in TAB completion hooks to trigger AC (Emacs >= 23.2)
-   ;;----------------------------------------------------------------------------
-   (setq tab-always-indent 'complete)  ;; use 'complete when auto-complete is disabled
-   (add-to-list 'completion-styles 'initials t)
-
-   ;; hook AC into completion-at-point
-   (defun set-auto-complete-as-completion-at-point-function ()
-     (setq completion-at-point-functions '(auto-complete)))
-   (add-hook 'auto-complete-mode-hook 'set-auto-complete-as-completion-at-point-function)
-
-
-   (set-default 'ac-sources
-                '(ac-source-dictionary
-                  ac-source-words-in-buffer
-                  ac-source-words-in-same-mode-buffers
-                  ac-source-words-in-all-buffer))
-
-   (dolist (mode '(magit-log-edit-mode log-edit-mode org-mode text-mode haml-mode
-                                       sass-mode yaml-mode csv-mode espresso-mode haskell-mode
-                                       html-mode nxml-mode sh-mode smarty-mode clojure-mode
-                                       lisp-mode textile-mode markdown-mode tuareg-mode
-                                       css-mode less-css-mode))
-  (add-to-list 'ac-modes mode))
-
-
-   ;; Exclude very large buffers from dabbrev
-   (defun smp-dabbrev-friend-buffer (other-buffer)
-     (< (buffer-size other-buffer) (* 1 1024 1024)))
-
-   (setq dabbrev-friend-buffer-function 'smp-dabbrev-friend-buffer)
-   (add-to-list 'ac-dictionary-directories (concat vendor-dir "auto-complete/dict/"))
-
-   (ac-config-default)
-
-
+  (ac-flyspell-workaround)
 #+end_src
 
 ** Load yasnippet
-
 #+begin_src emacs-lisp
   (require 'dropdown-list)
   (require 'yasnippet)
   (setq yas/verbosity 0
         yas/snippet-dirs (list (concat dotfiles-dir "/snippets")
-                               (concat dotfiles-dir "/snippets-imported"))
-        yas/prompt-functions '(yas/dropdown-prompt))
+                               (concat dotfiles-dir "/snippets-imported")))
+        ;;yas/prompt-functions '(yas/dropdown-prompt)
 
   (yas/global-mode 1)
 #+end_src
@@ -757,8 +709,6 @@ This is provided by other things I use
          (my-programming-hook)
          (electric-indent-mode -1)
          (electric-layout-mode -1)
-         (setq ac-sources '(ac-source-dictionary ac-source-words-in-buffer ac-source-yasnippet ac-source-words-in-same-mode-buffers))
-         (auto-complete-mode)
          ;;(paredit-mode)
          (whitespace-mode)
          ;;(glasses-mode)
@@ -933,8 +883,6 @@ Disable slime for now
   (electric-indent-mode -1)
   ;;(glasses-mode)
   ;(;auto-complete-mode)
-  ;;(require 'ac-python)
-  ;;(setq ac-sources '(ac-source-python ac-source-yasnippet))
   (whitespace-mode)
   )
 
@@ -959,7 +907,6 @@ Disable slime for now
     (my-programming-hook)
     (ruby-block-mode t)
     (setq ac-sources '(ac-source-yasnippet ac-source-words-in-buffer))
-    (auto-complete-mode))
 
   (add-hook 'ruby-mode-hook 'my-ruby-hook)
 #+end_src
@@ -1033,7 +980,6 @@ Disable slime for now
   (my-programming-hook)
   (zencoding-mode)
   (setq ac-sources '(ac-source-yasnippet))
-  (auto-complete-mode))
 
 (add-hook 'html-mode-hook 'my-html-mode-hook)
 #+end_src
