--- a/emacs.d/thomasf-emacs.org
+++ b/emacs.d/thomasf-emacs.org
@@ -906,7 +906,7 @@ Disable slime for now
     "My ruby hook"
     (my-programming-hook)
     (ruby-block-mode t)
-    (setq ac-sources '(ac-source-yasnippet ac-source-words-in-buffer))
+    (setq ac-sources '(ac-source-yasnippet ac-source-words-in-buffer)))
 
   (add-hook 'ruby-mode-hook 'my-ruby-hook)
 #+end_src
