--- a/emacs.d/thomasf-emacs.org
+++ b/emacs.d/thomasf-emacs.org
@@ -157,12 +157,13 @@ Themes load paths
 #+end_src
 ** Load package system
 #+begin_src emacs-lisp
-(require 'package)
-(setq package-archives
-      '(("original"    . "http://tromey.com/elpa/")
-        ("gnu"         . "http://elpa.gnu.org/packages/")
-        ("marmalade"   . "http://marmalade-repo.org/packages/")))
-(package-initialize)
+  (require 'package)
+  (setq package-user-dir (concat dotfiles-dir "elpa")
+        package-archives
+        '(("original"    . "http://tromey.com/elpa/")
+          ("gnu"         . "http://elpa.gnu.org/packages/")
+          ("marmalade"   . "http://marmalade-repo.org/packages/")))
+  (package-initialize)
 #+end_src
 ** Try to load private settings
 #+begin_src emacs-lisp
