Invert all tags with custom coloring

--- a/emacs.d/thomasf-emacs.org
+++ b/emacs.d/thomasf-emacs.org
@@ -1326,9 +1326,9 @@ Inspirations:
         (quote (("@home" :foreground "#2aa198" :weight bold :inverse-video t)
                 ("@office" :foreground "#2aa198" :weight bold :inverse-video t)
                 ("@errand" :foreground "#2aa198" :weight bold :inverse-video t)
-                ("WORK" :foreground "#b58900" :weight bold)
-                ("PERSONAL" :foreground "#b58900" :weight bold)
-                ("HOLD" :foreground "#859900" :weight bold)
+                ("WORK" :foreground "#b58900" :weight bold :inverse-video t)
+                ("PERSONAL" :foreground "#b58900" :weight bold :inverse-video t)
+                ("HOLD" :foreground "#859900" :weight bold :inverse-video t)
                 ("NOTE" :foreground "#d33682" :weight bold)
                 ("WAITING" :foreground "#cb4b16" :weight bold :inverse-video t)
                 ("CANCELLED" :foreground "#859900" :weight bold)
